kubernetes/all-resources-to-path-deployment-ingress.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
  labels:
    app: traefiklabs
    task: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: traefiklabs
      task: nginx
  template:
    metadata:
      labels:
        app: traefiklabs
        task: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: traefiklabs
    task: nginx
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
